# libhelium-rs

./: .gitignore  .gitmodules  Cargo.toml  Gir.toml  He-1.gir  README.md  index.html  style.css
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml
docs/git/: crates.js  search-index.js  settings.html  source-files.js
libhelium/: enum.BannerStyle.html  enum.BottomBarPosition.html  enum.Colors.html  enum.DesktopColorScheme.html  enum.OverlayButtonAlignment.html  struct.Application.html  struct.BottomBar.html  struct.Chip.html  struct.ContentBlockImageCluster.html  struct.MiniContentBlock.html  struct.ModifierBadge.html  struct.SideBar.html  struct.TextButton.html  struct.ViewDual.html  struct.ViewSubTitle.html  struct.Window.html
libhelium-sys/: Cargo.toml  Gir.toml  build.rs
libhelium-sys/src/: lib.rs
libhelium-sys/tests/: abi.rs  constant.c  layout.c  manual.h
libhelium/builders/: index.html  struct.ApplicationBuilder.html  struct.ApplicationWindowBuilder.html  struct.BadgeBuilder.html  struct.EmptyPageBuilder.html  struct.PillButtonBuilder.html  struct.SideBarBuilder.html  struct.ViewAuxBuilder.html  struct.ViewSwitcherBuilder.html  struct.WindowBuilder.html
libhelium/prelude/: index.html  trait.ButtonExt.html  trait.ContentListExt.html  trait.DisclosureButtonExt.html  trait.HeWindowExt.html  trait.ModifierBadgeExt.html
libhelium/traits/: trait.AboutWindowExt.html  trait.BottomBarExt.html  trait.ContentBlockImageExt.html  trait.EmptyPageExt.html  trait.MiniContentBlockExt.html  trait.OverlayButtonExt.html  trait.ViewAuxExt.html  trait.ViewExt.html  trait.ViewSubTitleExt.html
src/: application.rs  lib.rs
src/auto/: about_window.rs  app_bar.rs  application.rs  application_window.rs  badge.rs  banner.rs  bin.rs  bottom_bar.rs  button.rs  chip.rs  color_lab_color.rs  color_lch_color.rs  color_rgb_color.rs  color_xyz_color.rs  content_block.rs  content_block_image.rs  content_block_image_cluster.rs  content_list.rs  desktop.rs  dialog.rs  disclosure_button.rs  empty_page.rs  enums.rs  fill_button.rs  iconic_button.rs  latch.rs  mini_content_block.rs  mod.rs  modifier_badge.rs  outline_button.rs  overlay_button.rs  pill_button.rs  side_bar.rs  (+18 more)
(+469 files in other folders)
