[package]
name = "libhelium"
version = "0.1.0"
authors = ["Jamie Murphy <jamie@fyralabs.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/tau-OS/libhelium-rs"
description = "Rust bindings for libhelium"
repository = "https://github.com/tau-OS/libhelium-rs"
documentation = "https://docs.developers.tauos.co/libhelium-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libhelium"

[features]
dox = []
gtk_v4_2 = []
gtk_v4_4 = ["gtk_v4_2"]
gtk_v4_6 = ["gtk_v4_4"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = '0.2'
once_cell = "1.8"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.pango]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.gdk]
package = "gdk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.5"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.5"

[dependencies.ffi]
package = "libhelium-sys"
path = "./libhelium-sys"